Fix footer spacing and include small tag for author line

--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -1,10 +1,10 @@
 .footer {
   &__header {
-    padding-bottom: 1.5rem;
+    padding-bottom: 0.75rem;
   }
 
   &__title {
-    padding: 0.25rem 0;
+    padding: 0.5rem 0;
   }
 
   &__copy {
@@ -12,7 +12,7 @@
   }
 
   &__link {
-    padding: 0.25rem 0;
+    padding: 0.5rem 0;
     letter-spacing: 0.5px;
   }
 }
